# GW2Framework

./: .gitignore  CMakeLists.txt  README.md  README_TEST.md  fix_sidebar.py
include/: ConfigManager.h  DX11Hook.h  GW2API.h  ImGuiImpl.h  Logger.h  MemoryReader.h  MumbleLink.h  Plugin.h  PluginManager.h  arcdps.h
include/plugins/: CombatPlugin.h
src/: ConfigManager.cpp  DX11Hook.cpp  GUIInjector.cpp  GW2API.cpp  ImGuiImpl.cpp  Injector.cpp  MemoryReader.cpp  MumbleLink.cpp  PluginManager.cpp  main.cpp
src/plugins/: CombatPlugin.cpp
